tests/ui/issues/issue-48131.stderr
error: unnecessary `unsafe` block
  --> $DIR/issue-48131.rs:9:9
   |
LL |         unsafe { /* unnecessary */ }
   |         ^^^^^^ unnecessary `unsafe` block
   |
note: the lint level is defined here
  --> $DIR/issue-48131.rs:3:9
   |
LL | #![deny(unused_unsafe)]
   |         ^^^^^^^^^^^^^

error: unnecessary `unsafe` block
  --> $DIR/issue-48131.rs:19:13
   |
LL |             unsafe { /* unnecessary */ }
   |             ^^^^^^ unnecessary `unsafe` block

error: aborting due to 2 previous errors

